--- a/index.html
+++ b/index.html
@@ -25,4 +25,5 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://unpkg.com/jso/dist/jso.js"></script>
 <script src="./index.js" charset="utf-8"></script>
