--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <p><button href="#" class="btn btn-primary" hbp-auth>display token</button></p>
 </header>
 
-<div id="hbp-token" style="display: none;">
-<div id="hbp-user-id" style="display: none;">
+<div id="hbp-token">
+<div id="hbp-user-id">
 
   
 </div>
