--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <h1>HBP auth test</h1>
 </header>
 
+<h2>Token</h2>
 <div id="hbp-token">
+  
+<h2>User's data</h2> 
 <div id="hbp-user-id">
 
   
