--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 </header>
 
 <h2>Token</h2>
-<div id="hbp-token">
+<div id="hbp-token"></div>
   
 <h2>User's data</h2> 
-<div id="hbp-user-id">
+<div id="hbp-user-id"></div>
 
-  
-</div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="./jso.js"></script>
