--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <div id="hbp-token"></div>
   
 <h2>User's data</h2> 
-<div id="hbp-user-id"></div>
+<div id="hbp-user-data"></div>
 
+<h2>User's id</h2> 
+<div id="hbp-user-id"></div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="./jso.js"></script>
